fix: ajuste na listagem de usuários para retornar pageable correto.